# bbb-dmx

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: SPEC.convert.md  SPEC.fixturemap.md  SPEC.json.md  SPEC.matrixmap.md  SPEC.utilities.md
include/bbb/dmx/: aim.hpp  color_mapping.hpp  common.hpp  curve.hpp  fixture_groups.hpp  fixture_json.hpp  fixture_mapper.hpp  fixture_patch.hpp  fixture_profile.hpp  fixture_runtime.hpp  frame_set.hpp  json.hpp  mask.hpp  math.hpp  matrix_map.hpp  movertrack.hpp  pattern.hpp  semantic_merge.hpp  semantic_overrides.hpp  setup.hpp  shutter_mapping.hpp  tracking.hpp  universe.hpp  value.hpp
schemas/: bbb.dmx.assert.v1.schema.json  bbb.dmx.curve.v1.schema.json  bbb.dmx.fixture.profile.v1.schema.json  bbb.dmx.groups.v1.schema.json  bbb.dmx.mask.v1.schema.json  bbb.dmx.matrixmap.v1.schema.json  bbb.dmx.palette.v1.schema.json  bbb.dmx.patch.v2.schema.json  bbb.dmx.scene.v1.schema.json  bbb.dmx.semantic_overrides.v1.schema.json  bbb.dmx.setup.v1.schema.json
scripts/: validate-schemas.sh
tests/: bbb_dmx_core_tests.cpp
